--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,3 +261,23 @@ canvas
 {
     margin-top: 1rem;
 }
+
+.wrapper
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-rows: repeat(auto-fit, 240px);
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+}
+
+.gallery
+{
+    padding: 2rem;
+}
+
+.wrapper > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
