--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,12 +227,19 @@ footer
     margin: auto;
 }
 
+.video-stream
+{
+    position: absolute;
+    /* top: 1px; */
+    height: 240px;
+    width: 320px;
+    /* margin: auto; WHY IT DIDN'T WORK  */
+    /* margin-top: 1rem; */
+}
+
 .video
 {
-    height: 65%;
-    width: 80%;
-    /* margin: auto; WHY IT DIDN'T WORK  */
-    margin-top: 1rem;
+    height: 320px;
 }
 
 .flex-center
@@ -245,7 +252,7 @@ footer
 
 .btn-take-pic
 {
-    margin-top: 0.2rem;
+    margin-bottom: 2.2rem;
 }
 
 .disp-last-pics
@@ -301,10 +308,11 @@ button
     justify-content: space-around;
 }
 
-.toto
+.webcam
 {
     border-radius: 20px;
     background-color: #502F4C;
+    text-align: center;
 }
 
 .frame img
