--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ canvas
 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-template-rows: repeat(auto-fit, 240px);
+    /* grid-template-rows: repeat(auto-fit, 240px); */
     grid-column-gap: 1em;
     grid-row-gap: 1em;
 }
@@ -284,10 +284,13 @@ canvas
     padding: 2rem;
 }
 
-.wrapper > div > img {
-    width: 100%;
+.wrapper > section > img {
+    /* width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; */
+    display: block;
+    margin: auto;
+    padding-top: 1rem;
 }
 
 button
@@ -328,8 +331,25 @@ button
     text-align: center;
 }
 
-.disp-last-pics div div
+.disp-last-pics div div, .gallery .btn
 {
     display: flex;
     justify-content: space-around;
+}
+
+.gallery .wrapper section
+{
+    background-color: #502F4C;
+    height: 18rem;
+}
+
+.gallery .btn
+{
+    padding-top: 0.3rem;
+}
+
+/* LIKE BUTTON */
+.islike
+{
+    background: #b042f4;
 }
